feat: add transactions section

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ DB_NAME=walled_db
 DB_PASSWORD=momogip6
 DB_PORT=5432
 TOKEN_SECRET=secret
+DB_URL=postgres://postgres:momogip6@localhost:5432/walled_db
