--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,5 @@ DB_NAME=walled_db
 DB_PASSWORD=momogip6
 DB_PORT=5432
 TOKEN_SECRET=secret
-DB_URL=postgres://postgres:momogip6@localhost:5432/walled_db
+# DB_URL=postgres://postgres:momogip6@localhost:5432/walled_db
+DATABASE_URL=postgres://neondb_owner:zgeqWlav7O8Y@ep-wispy-union-a11dkf7v-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
